--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,40 @@ h2 {
     font-size: 35px;
 }
 
+.footer {
+    display: flex;
+    justify-content: end;
+    background-color: #020220;
+    text-align: end;
+    padding: 2px 10px;
+}
+
+
+.footer a {
+    text-decoration: none;
+}
+
+.footer i {
+    display: flex;
+    flex-direction: row;
+    color: white;
+    font-size: 20px;
+    padding: 5px;
+}
+
+.footer i:hover {
+    color: #0ce6e69f;
+}
+
+.copy {
+    color: white;
+    font-size: 10px;
+    font-family: "IBM Plexo Mono";
+    margin-top: 10px;
+    margin-bottom: 0px;
+    text-align: center;
+}
+
 
 
 
