--- a/css/style.css
+++ b/css/style.css
@@ -1,464 +1,373 @@
-@import url('https://fonts.googleapis.com/css2?family=Teko:wght@500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,600&family=Teko:wght@500;600&display=swap');
-
-*{
-    padding: 0;
-    margin: 0;
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,600&family=Teko:wght@500;600&display=swap");
+* {
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    background-color: #1e1e2e;
-}
-
-/* MENU DE NAVEGACION */
-
-.menu {
-    background-color: #05054e;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.menu a {
-    text-decoration: none;
-    padding: 5px;
-    font-family: "teko";
-    font-size: 30px;
-
-}
-.menu a img {
-    object-fit: cover;
-    border-radius: 100%;
-}
-
-.menu ul {
-    list-style-type: none;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.menu ul li {
-    padding: 10px;
-}
-
-.menu ul li a {
-    text-decoration: none;
-    color: white;
-    text-transform: uppercase;
-}
-
-.menu a:hover {
-    background-color: white;
-    border-radius: 10px;
-    color: #05054e;
-    transition: 1s;
-}
-
-.menu img {
-    width: 60px;
-    height: 60px;
-    border-radius: 100%;
-}
-
-/* INICIO */
-
-h1 {
-    background-color: #020220;
-    font-family: "teko";
-    text-align: center;
-    color: white;
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
-
-.carousel-inner, .carousel-item, .carousel-item img {
-    height: 600px;
-    object-fit: cover;
-    border-radius: 10px;
-}
-
-.carousel-inner, .carousel-item, .carousel-item p {
-    background-color: #020220;
-}
-
-h2 {
-    background-color: #020220 ;
-    text-align: center;
-    font-size: 20px;
-    color: white;
-    padding: 5px;
-}
-
-.inicio {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.inicio img {
-    height: 200px;
-    object-fit: cover;
-}
-
-.inicio p {
-    font-size: 15px;
-    color: black;
-    text-align: center;
-}
-
-.card {
-    background-color: black;
-    color: white;
-    border-color: white;
-    text-align: center;
-}
-
-.card img {
-    border-radius: 5px;
-}
-
-/* INTEGRANTES */
-
-.deskoo {
-    padding-bottom: 10px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-    min-height: 100vh;
-    max-height: 100%;
-    align-items: center;
-    gap: 30px;
-}
-
-.desko {
-    width: 90%;
-    height: 300px;
-    background-color: #020220;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    overflow: hidden;
-}
-
-.desko img {
-    width: 30%;
-    height: 100%;
-    text-align: center;
-    object-fit: cover;
-    filter: blur(3px);
-    transition: .5s;
-}
-
-.desko:hover img {
-    filter: blur(0);
-    height: 120%;
-    transition: .5s;
-}
-
-.desko__integrantes {
-    padding: 30px;
-}
-
-.desko:nth-child(2n+2) {
-    flex-direction: row-reverse;
-}
-
-.desko:hover {
-    border-radius: 20px;
-    box-shadow: 5px 5px 15px 0px white;
-    background-color: black;
-    transition: .5s;
-
-}
-
-/* CONTACTOS */
-
-.logo-form {
-    text-align: center;
-}
-.logo-form img {
-    width: 200px;
-    height: 200px;
-    margin-top: 10px;
-    margin-bottom: 15px;
-    border-radius: 100%;
-    object-fit: cover;
-}
-
-.logo-form img:hover{
-    border: 2px solid white;
-    transition: .5s;
-}
-
-.formulario {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.form-label {
-    width: 100px;
-    color: white;
-}
-
-.buttom{
-    margin-bottom: 10px;
-}
-
-.buttom input{
-    background-color: #020220;
-}
-
-.redes {
-    background-color: #020220;
-    margin-bottom: 15px;
-}
-
-.container i {
-
-    font-size: 40px;
-    color: white;
-    gap: 5px;
-}
-
-.container a {
-    text-decoration: none;
-    color: white;
-}
-
-.container i:hover, .container a:hover{
-    color: rgba(0, 255, 255, 0.589);
-    transition: 1s;
-}
-
-/*GALERIA*/
-
-.galeria {
-    border: 2px double white;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 300px);
-    grid-template-areas: 
-    "area1 area2 area2 area3"
-    "area4 area2 area2 area8"
-    "area6 area5 area5 area7";
-    align-items: center;
-    padding: 10px;
-    margin-bottom: 20px;
-    gap: 20px;
-}
-
-.galeria__img {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.galeria__img img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-
-.d1{
-    grid-area: area1;
-}
-
-.d2{
-    grid-area: area2;
-}
-
-.d3{
-    grid-area: area3;
-}
-
-.d4{
-    grid-area: area4;
-}
-
-.d5{
-    grid-area: area5;
-}
-
-.d6{
-    grid-area: area6;
-}
-
-.d7{
-    grid-area: area7;
-}
-
-.d8{
-    grid-area: area8;
-}
-
-.galeria__img img:hover{
-    border: 5px solid rgb(212, 190, 190);
-    border-radius: 25px;
-    transition: .5s;
-}
-
-/*TORENA MUSIC*/
-
-.tm {
-    text-align: center;
-    padding: 10px;
-}
-
-.tm img {
-    width: 350px;
-    height: 200px;
-    border-radius: 50%;
-}
-
-.tm img:hover {
-    border: 3px double white;
-    transition: .5s;
-}
-
-.estudio {
-    text-align: center;
-}
-
-.carousel-inner {
-    width: 100%;
-    height: 600px;
-    object-fit: cover;
-}
-
-.carousel-item {
-    width: 100%;
-    height: 800px;
-    object-fit: cover;
-}
-
-.torenamusic {
-    text-align: center;
-    background-color: #020220;
-    color: white;
-    font-family: "teko";
-    font-size: 35px;
+  background-color: #1e1e2e;
 }
 
 .footer {
-    display: flex;
-    justify-content: end;
-    background-color: #020220;
-    text-align: end;
-    padding: 2px 10px;
+  display: flex;
+  justify-content: end;
+  background-color: #020220;
+  border: rgba(12, 230, 230, 0.6235294118) solid 1px;
+  text-align: end;
+  padding: 2px 10px;
 }
-
-
 .footer a {
-    text-decoration: none;
+  text-decoration: none;
 }
-
 .footer i {
-    display: flex;
-    flex-direction: row;
-    color: white;
-    font-size: 20px;
-    padding: 5px;
+  display: flex;
+  flex-direction: row;
+  color: white;
+  font-size: 20px;
+  padding: 5px;
 }
-
 .footer i:hover {
-    color: #0ce6e69f;
+  color: rgba(12, 230, 230, 0.6235294118);
 }
 
 .copy {
-    color: white;
-    font-size: 10px;
-    font-family: "IBM Plexo Mono";
-    margin-top: 10px;
-    margin-bottom: 0px;
-    text-align: center;
+  color: white;
+  font-size: 10px;
+  font-family: "IBM Plexo Mono";
+  margin-top: 10px;
+  margin-bottom: 0px;
+  text-align: center;
 }
 
-
-
-
-@media only screen and (max-width:1024px){
-    .galeria {
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 300px);
-        grid-template-areas: 
-        "area1 area2 area2"
-        "area4 area2 area2"
-        "area6 area5 area5"
-        "area3 area7 area8";
+.menu {
+  background-color: #05054e;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.menu img {
+  object-fit: cover;
+  border-radius: 100%;
+}
+.menu img {
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+}
+.menu ul {
+  display: flex;
+  flex-direction: none;
+  justify-content: center;
+  align-items: center;
+  gap: 0px;
+  list-style-type: none;
+  text-decoration: none;
+}
+.menu ul li {
+  padding: 10px;
+}
+.menu ul a {
+  text-decoration: none;
+  padding: 5px;
+  font-family: "teko";
+  font-size: 30px;
+  color: white;
+}
+.menu ul a:hover {
+  background-color: white;
+  border-radius: 10px;
+  color: #05054e;
+  transition: 1s;
 }
 
-.galeria img {
+.logo-form {
+  text-align: center;
+}
+.logo-form img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  border-radius: 100%;
+}
+.logo-form img:hover {
+  border: 2px solid white;
+  transition: 0.5s;
+}
+
+.formulario {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+}
+.formulario .form-label {
+  text-align: center;
+  width: 100%;
+  color: white;
+}
+
+.buttom {
+  margin-bottom: 10px;
+}
+.buttom input {
+  background-color: #020220;
+}
+
+.redes {
+  background-color: #020220;
+  margin-bottom: 15px;
+}
+.redes .container i {
+  font-size: 40px;
+  color: white;
+  gap: 5px;
+}
+.redes .container i:hover {
+  color: rgba(0, 255, 255, 0.589);
+  transition: 1s;
+}
+.redes .container a {
+  text-decoration: none;
+  color: white;
+}
+.redes .container a:hover {
+  color: rgba(0, 255, 255, 0.589);
+  transition: 1s;
+}
+
+.galeria {
+  border: 2px double white;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 300px);
+  grid-template-areas: "area1 area2 area2 area3" "area4 area2 area2 area8" "area6 area5 area5 area7";
+  align-items: center;
+  padding: 10px;
+  margin-bottom: 20px;
+  gap: 20px;
+}
+.galeria__img {
+  width: 100%;
+  height: 100%;
+}
+.galeria__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.galeria__img img:hover {
+  border: 5px solid white;
+  border-radius: 20px;
+  transition: 0.5s;
+}
+.galeria .d1 {
+  grid-area: area1;
+}
+.galeria .d2 {
+  grid-area: area2;
+}
+.galeria .d3 {
+  grid-area: area3;
+}
+.galeria .d4 {
+  grid-area: area4;
+}
+.galeria .d5 {
+  grid-area: area5;
+}
+.galeria .d6 {
+  grid-area: area6;
+}
+.galeria .d7 {
+  grid-area: area7;
+}
+.galeria .d8 {
+  grid-area: area8;
+}
+
+h1 {
+  background-color: #020220;
+  font-family: "teko";
+  text-align: center;
+  color: white;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+h2 {
+  background-color: #020220;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  padding: 5px;
+}
+
+.carousel-inner, .carousel-inner .carousel-item img, .carousel-inner .carousel-item img .carousel-item, .carousel-inner .carousel-item {
+  height: 600px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.carousel-inner .carousel-item p {
+  background-color: #020220;
+}
+
+.card {
+  background-color: black;
+  color: white;
+  border-color: white;
+  text-align: center;
+}
+.card img {
+  border-radius: 5px;
+}
+
+.deskoo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding-bottom: 10px;
+  flex-wrap: wrap;
+  min-height: 100vh;
+  max-height: 100%;
+}
+.deskoo .desko {
+  display: flex;
+  flex-direction: none;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  width: 70%;
+  height: 300px;
+  background-color: #020220;
+  flex-wrap: wrap;
+  color: white;
+  overflow: hidden;
+}
+.deskoo .desko h3 {
+  color: rgba(12, 230, 230, 0.6235294118);
+}
+.deskoo .desko__integrantes {
+  padding: 30px;
+}
+.deskoo .desko img {
+  width: 30%;
+  height: 100%;
+  object-fit: cover;
+  text-align: center;
+}
+.deskoo .desko:nth-child(2n+2) {
+  flex-direction: row-reverse;
+}
+.deskoo .desko:hover {
+  border-radius: 20px;
+  box-shadow: 5px 5px 15px 0px white;
+  background-color: black;
+  transition: 0.5s;
+}
+
+@media only screen and (max-width: 1024px) {
+  .galeria {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 300px);
+    grid-template-areas: "area1 area2 area2" "area4 area2 area2" "area6 area5 area5" "area3 area7 area8";
+  }
+  .galeria img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.d2 {
+  }
+  .d2 {
     width: 100%;
     height: 100%;
-}
-.d2 img {
+  }
+  .d2 img {
     width: 100%;
     height: 100%;
+  }
 }
+@media only screen and (max-width: 768px) {
+  .menu {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .galeria {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 300px);
+    grid-template-areas: "area1 area2" "area4 area2" "area6 area5" "area3 area7" "area8 area8";
+  }
+  .d2 {
+    width: 100%;
+    height: 100%;
+  }
+  .d2 img {
+    width: 100%;
+    height: 100%;
+  }
+  .menu {
+    flex-direction: column;
+  }
+  .menu ul {
+    flex-direction: column;
+    padding-right: 2rem;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .galeria {
+    display: flex;
+    flex-direction: column;
+  }
+  .menu {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.tm {
+  text-align: center;
+  padding: 10px;
+}
+.tm img {
+  width: 350px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.tm img:hover {
+  border: 3px double white;
+  transition: 0.5s;
 }
 
-@media only screen and (max-width:768px){
-
-    .menu{
-        justify-content: center;
-        align-items: center;
-    }
-
-    .galeria {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(5, 300px);
-        grid-template-areas: 
-        "area1 area2"
-        "area4 area2"
-        "area6 area5"
-        "area3 area7"
-        "area8 area8";
-    }
-
-    .d2 {
-        width: 100%;
-        height: 100%;
-    }
-    .d2 img {
-        width: 100%;
-        height: 100%;
-    }
-
-    .menu {
-        flex-direction: column;
-    }
-
-    .menu ul {
-        flex-direction: column;
-        padding-right: 2rem;
-        justify-content: center;
-        align-items: center;
-    }
+.estudio {
+  text-align: center;
+}
+.estudio .carousel-inner, .estudio .carousel-inner .carousel-item, .carousel-inner .estudio .carousel-item, .estudio .carousel-inner .carousel-item img, .carousel-inner .carousel-item .estudio img {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+}
+.estudio .carousel-item {
+  width: 100%;
+  height: 800px;
+  object-fit: cover;
 }
 
-@media only screen and (max-width:480px){
-    .galeria {
-        display: flex;
-        flex-direction: column;
-    }
+.torenamusic {
+  text-align: center;
+  background-color: #020220;
+  color: white;
+  font-family: "teko";
+  font-size: 35px;
 }
 
+/*# sourceMappingURL=style.css.map */
