--- a/css/style.css
+++ b/css/style.css
@@ -40,43 +40,76 @@ body {
   text-align: center;
 }
 
-.menu {
+/*.menu {
+    background-color: $nav-color;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    img {
+        object-fit: cover;
+        border-radius: 100%;
+    }
+
+    img {
+        width: 60px;
+        height: 60px;
+        border-radius: 100%;
+    }
+
+    ul {
+        @include flex(none, center, center, 0px);
+        list-style-type: none;
+        text-decoration: none;
+
+        li {
+            padding: 10px;
+        }
+
+        a {
+            text-decoration: none;
+            padding: 5px;
+            font-family: "teko";
+            font-size: 30px;
+            color: $light-color;
+
+            &:hover {
+                background-color: $light-color;
+                border-radius: 10px;
+                color: $nav-color;
+                transition: 1s;
+            }
+        }
+    }
+}*/
+.navbar {
+  font-family: "teko";
+  font-size: 25px;
+}
+.navbar .offcanvas-body {
   background-color: #05054e;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  color: white;
 }
-.menu img {
+.navbar .container-fluid {
+  padding-left: 10px;
+  background-color: #05054e;
+}
+.navbar .container-fluid .navbar-toggler {
+  background-color: white;
+  color: gray;
+}
+.navbar .container-fluid img {
   object-fit: cover;
-  border-radius: 100%;
-}
-.menu img {
   width: 60px;
   height: 60px;
   border-radius: 100%;
 }
-.menu ul {
-  display: flex;
-  flex-direction: none;
-  justify-content: center;
-  align-items: center;
-  gap: 0px;
-  list-style-type: none;
-  text-decoration: none;
-}
-.menu ul li {
-  padding: 10px;
-}
-.menu ul a {
-  text-decoration: none;
-  padding: 5px;
-  font-family: "teko";
-  font-size: 30px;
+.navbar .container-fluid a {
   color: white;
 }
-.menu ul a:hover {
+.navbar .container-fluid a:hover {
   background-color: white;
   border-radius: 10px;
   color: #05054e;
@@ -222,6 +255,7 @@ h2 {
   color: white;
   border-color: white;
   text-align: center;
+  height: 100%;
 }
 .card img {
   border-radius: 5px;
@@ -240,7 +274,7 @@ h2 {
 }
 .deskoo .desko {
   display: flex;
-  flex-direction: none;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 5px;
@@ -255,16 +289,41 @@ h2 {
   color: rgba(12, 230, 230, 0.6235294118);
 }
 .deskoo .desko__integrantes {
-  padding: 30px;
+  padding: 20px;
+}
+.deskoo .desko__integrantes p {
+  color: white;
+  font-size: 20px;
+  font-family: "IBM Plex Mono";
+}
+.deskoo .desko__integrantes__ig {
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  background-color: #020220;
+  border: rgba(12, 230, 230, 0.6235294118) solid 1px;
+  text-align: center;
+  padding: 2px 10px;
+}
+.deskoo .desko__integrantes__ig a {
+  text-decoration: none;
+}
+.deskoo .desko__integrantes__ig i {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  font-size: 20px;
+  padding: 5px;
+}
+.deskoo .desko__integrantes__ig i:hover {
+  color: rgba(12, 230, 230, 0.6235294118);
 }
 .deskoo .desko img {
   width: 30%;
   height: 100%;
   object-fit: cover;
   text-align: center;
-}
-.deskoo .desko:nth-child(2n+2) {
-  flex-direction: row-reverse;
 }
 .deskoo .desko:hover {
   border-radius: 20px;
@@ -279,56 +338,47 @@ h2 {
     grid-template-rows: repeat(4, 300px);
     grid-template-areas: "area1 area2 area2" "area4 area2 area2" "area6 area5 area5" "area3 area7 area8";
   }
+  .galeria .d2 {
+    width: 100%;
+    height: 100%;
+  }
+  .galeria .d2 img {
+    width: 100%;
+    height: 100%;
+  }
   .galeria img {
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
-  .d2 {
-    width: 100%;
-    height: 100%;
+  .deskoo {
+    background-color: #1e1e2e;
   }
-  .d2 img {
-    width: 100%;
-    height: 100%;
+  .deskoo .desko {
+    background-color: rgba(3, 3, 44, 0.527);
+    display: flex;
+    flex-direction: column-reverse;
+    width: 99%;
+    height: 180px;
   }
 }
 @media only screen and (max-width: 768px) {
-  .menu {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-  }
   .galeria {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5, 300px);
     grid-template-areas: "area1 area2" "area4 area2" "area6 area5" "area3 area7" "area8 area8";
   }
-  .d2 {
+  .galeria .d2 {
     width: 100%;
     height: 100%;
   }
-  .d2 img {
+  .galeria .d2 img {
     width: 100%;
     height: 100%;
-  }
-  .menu {
-    flex-direction: column;
-  }
-  .menu ul {
-    flex-direction: column;
-    padding-right: 2rem;
-    justify-content: center;
-    align-items: center;
   }
 }
 @media only screen and (max-width: 480px) {
   .galeria {
-    display: flex;
-    flex-direction: column;
-  }
-  .menu {
     display: flex;
     flex-direction: column;
   }
