--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -39,6 +39,7 @@ h2 {
     color: $light-color;
     border-color: $light-color;
     text-align: center;
+    height: 100%;
 
     img {
         border-radius: 5px;
