--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,50 @@ h2 {
   border-radius: 5px;
 }
 
+.carousell {
+  width: 100%;
+  height: 600px;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+}
+.carousell .descokada {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  position: absolute;
+  opacity: 0;
+  animation: slide-fade 12s infinite;
+}
+.carousell .descokada:nth-child(1) {
+  animation-delay: 0;
+}
+.carousell .descokada:nth-child(2) {
+  animation-delay: 4s;
+}
+.carousell .descokada:nth-child(3) {
+  animation-delay: 8s;
+}
+.carousell img {
+  width: 900px;
+  height: 100%;
+  object-fit: cover;
+}
+
+@keyframes slide-fade {
+  0% {
+    opacity: 0;
+  }
+  8% {
+    opacity: 1;
+  }
+  33% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 0;
+  }
+}
 .deskoo {
   display: flex;
   flex-direction: column;
