acomodando mis imagenes de class carousell, de torena music, modificanso imagenes de mi galeria

--- a/scss/layout/_mediaqueris.scss
+++ b/scss/layout/_mediaqueris.scss
@@ -61,6 +61,11 @@
             }
         }
     }
+
+    .carousell {
+        width: 100%;
+        height: 250px;
+    }
 }
 
 @media only screen and (max-width:480px){
