--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ body {
   object-fit: cover;
 }
 .galeria__img img:hover {
-  border: 5px solid white;
+  border: 3px solid white;
   border-radius: 20px;
   transition: 0.5s;
 }
@@ -286,7 +286,7 @@ h2 {
   animation-delay: 8s;
 }
 .carousell img {
-  width: 900px;
+  width: 100%;
   height: 100%;
   object-fit: cover;
 }
@@ -419,6 +419,10 @@ h2 {
   .galeria .d2 img {
     width: 100%;
     height: 100%;
+  }
+  .carousell {
+    width: 100%;
+    height: 250px;
   }
 }
 @media only screen and (max-width: 480px) {
