--- a/scss/layout/_torenamusic.scss
+++ b/scss/layout/_torenamusic.scss
@@ -19,6 +19,7 @@
 
 .torenamusic {
     text-align: center;
+    padding: 20px;
     background-color: $primary-color;
     color: $light-color;
     font-family: $font;
