agregue comentarios de identificacion ej: //galeria y modifique img jpeg por jpg

--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -1,8 +1,8 @@
 // COLORS
 
-$main-color:#1e1e2e;
+$main-color:#232331;
 $light-color:white;
-$primary-color:#020220;
+$primary-color:#010133;
 $card-color:black;
 $nav-color:#05054e;
 
