--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,3 +1,5 @@
+// INICO
+
 h1 {
     background-color: $primary-color;
     font-family: $font;
@@ -37,7 +39,6 @@ h2 {
     .descokada {
         width: 100%;
         height: 100%;
-        text-align: center;
         position: absolute;
         opacity: 0;
         animation: slide-fade 12s infinite;
