--- a/scss/layout/_integrantes.scss
+++ b/scss/layout/_integrantes.scss
@@ -1,3 +1,5 @@
+// INTEGRANTES
+
 .deskoo {
 
     @include flex(column, center, center, 20px);
@@ -22,7 +24,7 @@
         &__integrantes {
 
             p {
-                color: white;
+                color: $light-color;
                 font-size: 17px;
                 font-family: "IBM Plex Mono"
             }
